feat:delete cat
